faces/SensorFaceController.cpp
@@ -956,6 +956,11 @@ void SensorFaceController::savePreset()
         pluginName += QString::number(suffix);
     }
 
+    // Important! We need to ensure the directory remains valid as long as it has
+    // not been installed yet. Since the install is asynchronous, we need to make
+    // sure that the QTemporaryDir does not go out of scope until the install is
+    // finished, so this directory will be moved into the lambda connected to the
+    // job finished signal below to ensure it lives as long as the job.
     QTemporaryDir dir;
     if (!dir.isValid()) {
         return;
@@ -1015,7 +1020,7 @@ void SensorFaceController::savePreset()
     configGroup.sync();
 
     auto *job = KPackage::PackageJob::install(QStringLiteral("Plasma/Applet"), dir.path());
-    connect(job, &KJob::finished, this, [this]() {
+    connect(job, &KJob::finished, this, [this, dir = std::move(dir)](KJob *job) {
         if (job->error() == 0) {
             d->availablePresetsModel->reload();
         } else {
